Fixed text overflow

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  word-wrap: break-word;
 }
 
 html,
@@ -21,6 +22,7 @@ header {
   color: white;
   font-size: 30px;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  overflow: hidden;
 }
 
 .user-interactions {
